# OS-LABS

./: CMakeLists.txt  README.md
lab1/doc/: log-style.sty  report.tex
lab2/: CMakeLists.txt  main.c
lab2/include/: parent.h  utils.h
lab2/src/: child1.c  child2.c  parent.c  utils.c
lab3/: CMakeLists.txt  main.c
lab3/include/: bitonic.h  utils.h
lab3/src/: bitonic.c  utils.c
lab4/: CMakeLists.txt  main.cpp
lab4/include/: parent.h  utils.h
lab4/src/: child1.cpp  child2.cpp  parent.cpp  utils.cpp
lab5/: CMakeLists.txt  program1.c  program2.c
lab5/include/: contracts.h
lab5/src/: firstRealization.c  secondRealization.c
tests/: CMakeLists.txt  Makefile  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab5_test.cpp
